Fix T57388: Blender Internal + Freestyle viewport render wrongly using FSAA.